# spotti

./: .gitignore  Cargo.toml  README.md
bot/: downbot.py  requirements.txt
scripts/: add-id.py  cron.sh  last24.sh  services.sh  spotti-downbot.service  spotti.service  update.sh  uptime.sh
src/: lib.rs  main.rs  spotti.py
