[package]
name = 'spotti'
version = '0.1.0'
authors = ['Zack H <zphixon@gmail.com>']
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = '2.3.0'
axum = '0.6.1'
axum-macros = '0.3.0'
tracing-subscriber = '0.3.16'
axum-sessions = '0.4.1'
sqlx = { version = '0.6.2', features = ['runtime-tokio-native-tls', 'sqlite'] }
rand = '0.8.5'
serde_json = '1.0.91'
serde = '1.0.152'
reqwest = { version = '0.11.13', features = ['json'] }
tokio = { version = '1.23.0', features = ['full'] }
tracing = '0.1.34'
once_cell = '1.17.0'
toml = '0.5.10'
