[package]
name = 'spotti'
version = '0.1.0'
authors = ['Zack H <zphixon@gmail.com>']
edition = '2018'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = '2.5.1'
axum = '0.7.5'
axum-macros = '0.4.1'
tracing-subscriber = '0.3.18'
tower-sessions = '0.13.0'
sqlx = { version = '0.8.2', features = ['runtime-tokio-native-tls', 'sqlite'] }
rand = '0.8.5'
serde_json = '1.0.128'
serde = '1.0.210'
reqwest = { version = '0.12.7', features = ['json'] }
tokio = { version = '1.40.0', features = ['full'] }
tracing = '0.1.40'
once_cell = '1.20.0'
toml = '0.8.19'
axum-extra = { version = '0.9.3', features = ['typed-header'] }
